# no-vacancy

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  Dockerfile  Dockerfile.airflow  Dockerfile.frontend  Dockerfile.inference  Dockerfile.mlflow  Dockerfile.training  Makefile  README.md  alembic.ini  docker-compose.yml  no_vacancy_eda.ipynb  novacancy_frontend_plan.md  pyproject.toml  requirements.txt  trigger_training.sh
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  deploy_to_prod.yaml  model_training.yaml  model_validation.yaml  schedule_training.yaml
alembic/: env.py
alembic/versions_bronze/: a88b67d89226_baseline_for_bronze.py
alembic/versions_silver/: 056f3d0a174f_baseline_silver.py
app/: cd_config.py  config.py  controller.py  main.py
app/airflow/dags/: training_pipeline_dag.py
app/api/: config.py
app/api/routes/: healthcheck.py
app/dags/: training_pipeline_dag.py
app/db/: db_init.py  postgres.py
app/endpoints/: health.py  predict.py  version.py
app/logs/: no_vacancy_api.log.2024-12-20  no_vacancy_api.log.2025-01-01  no_vacancy_api.log.2025-01-06  no_vacancy_api.log.2025-01-07  no_vacancy_api.log.2025-01-08
app/models/: no_vacancy_pipeline  no_vacancy_pipeline.pkl
app/routers/: health.py  predict.py  version.py
app/schemas/: bronze.py  gold.py  silver.py
app/scripts/: check_dag_locally.py  check_validate_model.py  check_validated_model.py  deploy_inference_model.py  deploy_on_merge.py  import_csv_to_postgres.py  promote_model.py  promote_to_staging.py  restart_inference_container.py  setup_env.sh  setup_test_models.py  trigger_training.py  validate_model_metrics.py
app/services/: __init__.py  cd_pipeline.py  config_services.py  data_management.py  mlflow_utils.py  pickle_read.py  pipeline.py  pipeline_management.py  predictor.py  preprocessing.py  sandbox.py  trainer.py  training_orchestrator.py
app/services/deployment/: __init__.py  base.py  inference_deployment.py  mlflow_deployment.py  training_deployment.py
app/services/validation/: __init__.py  base.py  manual_validator.py  performance_validator.py
app/tests/: __init__.py  conftest.py  test_config.py
app/tests/test_dags/: conftest.py  test_dag_integration.py  (+1 more)
app/validations/: __init__.py  schemas.py  setup_ge.py  validators.py
data/: X_test_debug.csv  X_train_debug.csv
data/processed/: test.csv  train.csv  validation.csv
data/raw/: test.csv  train.csv  validation.csv
frontend/: __init__.py  app.py  config.py
frontend/templates/: base.html  index.html
requirements/: airflow.txt  base.txt  dev.txt  frontend.txt
scripts/: import_csv_to_postgres.py  test_dbs.sh
scripts_tmp/: test_dbs.sh
tests/: __init__.py  conftest.py  test_config.py
tests/test_db/: test_all_dbs.py
tests/test_endpoints/: test_predict.py
tests/test_routers/: test_predict.py
tests/test_routes/: test_predict.py
tests/test_scripts/: test_csv_utils.py  test_import_csv_integration.py
tests/test_services/: test_data_management.py  test_integration.py  test_pipeline.py  test_pipeline_management.py  test_predictor.py  test_preprocessing.py  test_trainer.py
(+24 files in other folders)
